kubernetes/apps/overleaf/mongo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overleaf-mongo
  namespace: overleaf
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
