kubernetes/apps/overleaf/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overleaf-redis
  namespace: overleaf
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
