kubernetes/apps/overleaf/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overleaf
  namespace: overleaf
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`latex.pxldi.de`)
      priority: 10
      middlewares:
        - name: internal-only
          namespace: traefik
        - name: authentik-forward-auth
          namespace: traefik
      services:
        - name: main
          port: 80
